fixing line spacing on blog titles in lists

--- a/media/css/devices.css
+++ b/media/css/devices.css
@@ -1056,7 +1056,7 @@ ul.bloglist li {
 
 ul.bloglist li p.blogtitle {
 	font-size: 1.3em;
-	line-height: 1em;
+	line-height: 1.2em;
 	margin-bottom: 10px;
 }
 
